wrap div fix and styles contact fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ p{
 .main-footer{
     width: 96%;
     margin: 0 auto;
+    margin-top: 50px;
 }
 
 .info {
